--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,25 @@
-cs50
-Flask
-Flask-Session
-requests
+cachelib==0.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+click==8.0.3
+cs50==8.0.0
+dataclasses==0.8
+Flask==2.0.2
+Flask-Login==0.5.0
+Flask-Session==0.4.0
+greenlet==1.1.2
+gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.8.2
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+pkg-resources==0.0.0
+requests==2.26.0
+SQLAlchemy==1.4.28
+sqlparse==0.4.2
+termcolor==1.1.0
+typing-extensions==4.0.1
+urllib3==1.26.7
+Werkzeug==2.0.2
+zipp==3.6.0
