--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,28 @@
-cachelib==0.4.1
+alembic==1.7.5
 certifi==2021.10.8
 charset-normalizer==2.0.9
 click==8.0.3
 cs50==8.0.0
+dataclasses==0.8
 Flask==2.0.2
 Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==1.0.0
+Frozen-Flask==0.18
 greenlet==1.1.2
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.8.2
+importlib-resources==5.4.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.1.6
 MarkupSafe==2.0.1
+pkg-resources==0.0.0
+psycopg2==2.9.2
+regex==2021.11.10
 requests==2.26.0
 SQLAlchemy==1.4.28
 sqlparse==0.4.2
@@ -20,4 +30,5 @@ termcolor==1.1.0
 typing-extensions==4.0.1
 urllib3==1.26.7
 Werkzeug==2.0.2
+WTForms==3.0.0
 zipp==3.6.0
